auth is partially functional. The session expires on page refresh. Need to fix session longevity

--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -11,6 +11,10 @@
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
     "angular-resource": "~1.4.0",
+    "angular-cookies": "~1.4.0",
     "html5-boilerplate": "~5.2.0"
+  },
+  "resolutions": {
+    "angular": "~1.4.0"
   }
 }
