--- a/backend/backend/local_settings.py.example
+++ b/backend/backend/local_settings.py.example
@@ -11,3 +11,6 @@ DATABASES = {
         'PORT': '5432'
     }
 }
+
+SOCIAL_AUTH_FACEBOOK_KEY = '<your app id goes here>'
+SOCIAL_AUTH_FACEBOOK_SECRET = '<your app secret goes here'
